# ErisPulse-AIChat

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  INSTALL.md  LICENSE  README.md  REPLY_STRATEGY.md  config.example.toml  docker-compose.yml  main.py  pyproject.toml
AIChat/: Core.py  __init__.py
AIChatMessageStore/: Core.py  __init__.py
ErisPulse_AIChat/: Core.py
QvQChat/: Core.py  __init__.py  active_mode_manager.py  ai_client.py  commands.py  config.py  handler.py  intent.py  memory.py  reply_judge.py  session_manager.py  state.py  utils.py
tools/: build.py
